Added the basic tester code project repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Songify_F25_Generator_and_StarterCode/Songify_F25_FeeneySolution"]
 	path = Songify_F25_Generator_and_StarterCode/Songify_F25_FeeneySolution
 	url = https://github.com/FeeneyCodes/Songify_F25_FeeneySolution
+[submodule "Songify_F25_Generator_and_StarterCode/Songify_F25_TesterExerciser"]
+	path = Songify_F25_Generator_and_StarterCode/Songify_F25_TesterExerciser
+	url = https://github.com/FeeneyCodes/Songify_F25_TesterExerciser.git
